// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.Password /> Snapshots should match with default input 1`] = `
.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
  color: #41414A;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #41414A;
  border-color: #41414A;
}

.c3:focus + .c4 {
  top: 0;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c3:focus,
.c3:hover {
  border-color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 8px;
  padding-left: 8px;
  height: 52px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #41414A;
}

.c1,
.c1 .c2 {
  width: 312px;
}

.c1 .c7 {
  color: #9898A6;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 8px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c6:hover svg,
.c6:focus svg {
  fill: #41414A;
}

.c6 svg {
  height: 52px;
  fill: #9898A6;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2 c3"
        type="password"
        value=""
      />
      <label
        class="c4 c5"
      >
        Label
      </label>
    </div>
    <div
      class="c6"
      role="button"
      tabindex="0"
    >
      <svg />
    </div>
  </div>
</div>
`;

exports[`<Input.Password /> Snapshots should match with disabled input 1`] = `
.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
  color: #41414A;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #41414A;
  border-color: #41414A;
}

.c3:focus + .c4 {
  top: 0;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c3:focus,
.c3:hover {
  border-color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c7,
.c7 .c2 {
  width: 312px;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 8px;
  padding-left: 8px;
  height: 52px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #41414A;
}

.c1,
.c1 .c2 {
  width: 312px;
}

.c1 .c8 {
  color: #9898A6;
}

.c1 svg {
  fill: #D3D3E2;
  pointer-events: none;
}

.c1 .c4,
.c1 .c8 {
  color: #D3D3E2;
}

.c1 .c2 {
  border-color: #D3D3E2;
  color: #D3D3E2;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 8px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
  cursor: not-allowed;
  pointer-events: none;
}

.c6:hover svg,
.c6:focus svg {
  fill: #41414A;
}

.c6 svg {
  height: 52px;
  fill: #9898A6;
  fill: #D3D3E2;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      disabled=""
    >
      <input
        class="c2 c3"
        disabled=""
        type="password"
        value=""
      />
      <label
        class="c4 c5"
      >
        Label
      </label>
    </div>
    <div
      class="c6"
      disabled=""
      role="button"
    >
      <svg />
    </div>
  </div>
</div>
`;

exports[`<Input.Password /> Snapshots should match with full width 1`] = `
.c5 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  background-color: #FFFFFF;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  border-radius: 8px;
  border: 1px solid #D3D3E2;
  color: #41414A;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #41414A;
  border-color: #41414A;
}

.c3:focus + .c4 {
  top: 0;
  left: 14px;
  padding-right: 4px;
  padding-left: 4px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #41414A;
}

.c3:focus,
.c3:hover {
  border-color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c7,
.c7 .c2 {
  width: 312px;
}

.c8,
.c8 .c2 {
  width: 312px;
}

.c8 .c4,
.c8 .c9 {
  color: #D3D3E2;
}

.c8 .c2 {
  border-color: #D3D3E2;
  color: #D3D3E2;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 8px;
  padding-left: 8px;
  height: 52px;
  fill: #9898A6;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #41414A;
}

.c1,
.c1 .c2 {
  width: 100%;
}

.c1 .c9 {
  color: #9898A6;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 8px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c6:hover svg,
.c6:focus svg {
  fill: #41414A;
}

.c6 svg {
  height: 52px;
  fill: #9898A6;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2 c3"
        type="password"
        value=""
      />
      <label
        class="c4 c5"
      >
        Label
      </label>
    </div>
    <div
      class="c6"
      role="button"
      tabindex="0"
    >
      <svg />
    </div>
  </div>
</div>
`;
